--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -190,7 +190,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <TextBlock x:Name="packagecontent_txtblock_showpack" HorizontalAlignment="Left" Margin="36,167,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="52" Width="235" FontSize="24">
+            <TextBlock x:Name="packagecontent_txtblock_showpack" HorizontalAlignment="Left" Margin="36,158,0,0" TextWrapping="Wrap" Text="Package Content" VerticalAlignment="Top" Height="52" Width="235" FontSize="24">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
@@ -201,7 +201,7 @@
             <Label x:Name="sender_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="36,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="reciever_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="weigh_lbl" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
-            <TextBlock x:Name="comment_txtblock" TextWrapping="Wrap" Text="Comment" Margin="36,483,28,47" Background="White"/>
+            <TextBlock x:Name="comment_txtblock" TextWrapping="Wrap" Text="Comment" Margin="36,483,28,47" Background="#FFA4A4A4"/>
             <TextBlock x:Name="status_txtblock" HorizontalAlignment="Left" Margin="36,336,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" Height="52" Width="118" FontSize="36">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -217,7 +217,7 @@
             <CheckBox x:Name="Usual_checkbox_showpack" IsHitTestVisible="False" Focusable="False" Content="Usual" HorizontalAlignment="Left" Margin="627,337,0,0" VerticalAlignment="Top" Height="33" Width="105" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
             <CheckBox x:Name="Vip_checkbox_showpack" Content="VIP" HorizontalAlignment="Left" IsHitTestVisible="False" Focusable="False" Margin="627,370,0,0" VerticalAlignment="Top" Height="33" Width="105" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
             <CheckBox x:Name="checkbox_breack" IsHitTestVisible="False" Focusable="False" Checked="breack_checkbox_Checked" Content="Breackable" HorizontalAlignment="Left" Margin="45,238,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
-            <CheckBox x:Name="checkbox_doc" IsHitTestVisible="False" Focusable="False" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="45,217,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
+            <CheckBox x:Name="checkbox_doc" IsHitTestVisible="False" Focusable="False" Checked="doc_checkbox_Checked" Content="Document" HorizontalAlignment="Left" Margin="45,204,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="110"/>
             <CheckBox x:Name="checkbox_object" IsHitTestVisible="False" Focusable="False" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="45,269,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
 
