--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -43,8 +43,8 @@
                 </TextBlock.Foreground><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
             <Button Content="Search" Click="Search_Click" HorizontalAlignment="Left" Margin="593,480,0,0" VerticalAlignment="Top" Height="42" Width="266" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontWeight="Bold" FontSize="24"/>
 
-            <TextBox x:Name="pricePaid_txt_as" HorizontalAlignment="Center" Margin="0,224,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
-            <TextBox x:Name="weight_txt_as" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="pricePaid_txt_as" HorizontalAlignment="Center" Margin="0,224,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="weight_txt_as" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="#FF181615" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
 
             <TextBlock x:Name="Type_txtblock" HorizontalAlignment="Left" Margin="58,417,0,0" TextWrapping="Wrap" Text="Type" VerticalAlignment="Top" Height="37" Width="217" FontSize="24">
                 <TextBlock.Foreground>
@@ -69,7 +69,7 @@
             <CheckBox x:Name="object_checkbox_as" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="338,125,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="18" Width="109"/>
         </Grid>
         <Grid x:Name="grid_showinformation" Margin="205,0,0,0" Visibility ="Collapsed">
-            <TextBox x:Name="tbPackageID" HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" Foreground="White" BorderBrush="#FFFF7B00" Background="Black"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="tbPackageID" HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" Foreground="White" BorderBrush="#FFFF7B00" Background="Black"/>
             <Label x:Name="lblError_findpackage" VerticalContentAlignment="Center" Visibility="Collapsed" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Width="276" Height="43" Content="*No package found!*" Foreground="Red" Margin="52,124,0,0" />
             <TextBlock HorizontalAlignment="Left" Margin="45,36,0,0" TextWrapping="Wrap" Text="Order ID" VerticalAlignment="Top" Height="38" Width="143" FontSize="24">
                 <TextBlock.Foreground>
@@ -100,9 +100,9 @@
                         <GradientStop Color="#FFFF7B00" Offset="0"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground><Run Text="Charge Account"/><LineBreak/><Run/></TextBlock>
-            <TextBox x:Name="cardNumber" HorizontalAlignment="Left" Margin="500,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="cardNumber_TextChanged"/>
-            <TextBox x:Name="cvv2" HorizontalAlignment="Left" Margin="500,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="35" RenderTransformOrigin="0.491,0.025" TextChanged="cvv2_TextChanged"/>
-            <TextBox x:Name="amount" HorizontalAlignment="Left" Margin="500,399,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="44" TextChanged="amount_TextChanged"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="cardNumber" HorizontalAlignment="Left" Margin="500,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="cardNumber_TextChanged"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="cvv2" HorizontalAlignment="Left" Margin="500,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="35" RenderTransformOrigin="0.491,0.025" TextChanged="cvv2_TextChanged"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="amount" HorizontalAlignment="Left" Margin="500,399,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="44" TextChanged="amount_TextChanged"/>
             <Button x:Name="pay_btn" Content="Pay" HorizontalAlignment="Left" Margin="551,470,0,0" VerticalAlignment="Top" Height="59" Width="228" Click="pay_btn_Click" FontSize="24" Foreground="White" BorderBrush="#FF1A1A1A">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -115,8 +115,8 @@
             <TextBlock x:Name="card_txtblock_Copy" HorizontalAlignment="Left" Margin="500,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="Expiration Date"/>
             <TextBlock x:Name="card_txtblock_Copy1" HorizontalAlignment="Left" Margin="500,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="CVV2"/>
             <TextBlock x:Name="card_txtblock_Copy2" HorizontalAlignment="Left" Margin="500,367,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="Amount"/>
-            <TextBox x:Name="expiration_year" HorizontalAlignment="Left" Margin="500,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="35"/>
-            <TextBox x:Name="expiration_month" HorizontalAlignment="Left" Margin="696,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="35"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="expiration_year" HorizontalAlignment="Left" Margin="500,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="35"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="expiration_month" HorizontalAlignment="Left" Margin="696,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="35"/>
             <TextBlock HorizontalAlignment="Left" Margin="625,214,0,0" TextWrapping="Wrap" Text="    /" VerticalAlignment="Top" Height="35" Width="66" Foreground="White" FontSize="24"/>
         </Grid>
         <Grid x:Name="grid_changeinformation" Margin="205,0,0,0" Visibility="Collapsed">
@@ -130,9 +130,9 @@
                     </LinearGradientBrush>
                 </Button.Background>
             </Button>
-            <TextBox x:Name="tbUsername" HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="White" TextChanged="tbusername_TextChanged"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="tbUsername" HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="White" TextChanged="tbusername_TextChanged"/>
             <Label x:Name="lblUsername" HorizontalAlignment="Left" Margin="394,94,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
-            <TextBox x:Name="Password" HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" Foreground="#FFFF7B00" BorderBrush="White" Background="#FF181615" TextChanged="Password_TextChanged"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="Password" HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" Foreground="#FFFF7B00" BorderBrush="White" Background="#FF181615" TextChanged="Password_TextChanged"/>
             <Label x:Name="lblPassword" HorizontalAlignment="Left" Margin="394,258,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
 
         </Grid>
@@ -181,7 +181,7 @@
             <Label x:Name="sender_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="36,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="reciever_lbl" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="627,100,0,0" VerticalAlignment="Top" Height="62" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
             <Label x:Name="weigh_lbl" Content="Label" HorizontalAlignment="Left" Margin="627,215,0,0" VerticalAlignment="Top" Height="54" Width="203" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" />
-            <TextBox x:Name="comment_tb" IsEnabled="False" TextChanged="comment_tb_TextChanged" TextWrapping="Wrap" Text="" Margin="36,483,28,47" Background="White"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="comment_tb" IsEnabled="False" TextChanged="comment_tb_TextChanged" TextWrapping="Wrap" Text="" Margin="36,483,28,47" Background="White"/>
             <TextBlock x:Name="status_txtblock" HorizontalAlignment="Left" Margin="36,336,0,0" TextWrapping="Wrap" Text="Status" VerticalAlignment="Top" Height="52" Width="118" FontSize="36">
                 <TextBlock.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
