--- a/Mail Man/Mail Man/Login.xaml
+++ b/Mail Man/Mail Man/Login.xaml
@@ -5,10 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
-        Title="Login" Height="500" Width="800" Background="#0C1A1A" ResizeMode="NoResize" Icon="/PostLogo.png">
+        Title="Login" Height="500" Width="800" ResizeMode="NoResize" Icon="/PostLogo.png">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+            <GradientStop Color="#0C1A1A" Offset="1"/>
+            <GradientStop Color="#0a1828" Offset="0"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
         <TextBlock HorizontalAlignment="Center" Margin="0,415,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
-        <Grid Margin="240,91,233,91" Background="#0C1A1A">
+        
+        <Grid Margin="240,91,233,91" >
+            
             <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Welcome" VerticalAlignment="Top" Foreground="White" Height="27" Width="132" FontWeight="Bold" FontFamily="Gautami" FontSize="24"/>
             <Label FontSize="10" Visibility="Collapsed" Foreground="#178582" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="30" Margin="56,180,56,0" RenderTransformOrigin="0.499,0.553" Name="lblError" >*Username or Password is incorrect!*</Label>
             <Button Content="Log In" HorizontalAlignment="Center" Margin="0,205,0,0" VerticalAlignment="Top" Height="31" Width="160" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#BFA181" Foreground="White" Click="btnLog_In">
