--- a/Mail Man/Mail Man/SignUp.xaml
+++ b/Mail Man/Mail Man/SignUp.xaml
@@ -53,6 +53,7 @@
             </Grid>
         </Border>
             <TextBlock HorizontalAlignment="Center" Margin="0,407,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FFC07F00" FontFamily="MV Boli" Height="22"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
+                        <Button x:Name="leftarrow_btn" Content="⬅️" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="#FF1A1A1A" Height="31" Width="47" FontSize="24" FontWeight="Bold" FontFamily="Algerian"/>
 
     </Grid>
 </Window>
