--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -154,7 +154,7 @@
         </Grid>
 
         <Grid x:Name="grid_checkpackage" Grid.Column="1" Visibility="Collapsed" >
-            <TextBox x:Name="tbPackageID" HorizontalAlignment="Center" VerticalContentAlignment="Center" Margin="0,249,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="276" Height="43" Foreground="#BFA181" Background="#0C1A1A" BorderBrush="#BFA181"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="tbPackageID" HorizontalAlignment="Center" Margin="0,249,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="276" Height="43" Foreground="#BFA181" Background="#0C1A1A" BorderBrush="#BFA181"/>
             <Label x:Name="lblError_findpackage" VerticalContentAlignment="Center" Visibility="Collapsed" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" Width="276" Height="43" Content="*No package found!*" Foreground="Red" Margin="0,292,0,0" />
             <Button Content="Search" Click="btnSearch_order_showpackage" HorizontalAlignment="Center" Margin="0,380,0,0" VerticalAlignment="Top" Height="36" Width="179" BorderBrush="#BFA181" Background="#BFA181" FontSize="22" FontWeight="Bold"/>
             <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Show Package" VerticalAlignment="Top" Height="80" Width="327" Foreground="White" FontSize="36"/>
