--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -14,15 +14,15 @@
     </Window.Background>
     <Grid >
         <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#0C1A1A" Panel.ZIndex="-10" Margin="0,0,900,0">
-            <Button x:Name="logout_btn" Click="logout_btn_Click" Content="Log out" Margin="0,471,-1,59" Background="#0C1A1A" BorderBrush="#0C1A1A" Foreground="#BFA181" FontSize="14" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
+            <Button x:Name="logout_btn" Click="logout_btn_Click" Content="Log out" Margin="0,471,9,59" Background="#0C1A1A" BorderBrush="#0C1A1A" Foreground="#BFA181" FontSize="14" FontWeight="Bold" FontFamily="Arial Rounded MT Bold"/>
         </Border>
 
         <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="-1,24,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#BFA181" FontSize="16" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#0C1A1A" BorderBrush="#0C1A1A" Click="btn_home_Click"/>
-        <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Left" VerticalAlignment="Top" Height="69" Width="169" Click="btn_report_Click" Foreground="#BFA181" Background="#0C1A1A" BorderBrush="#0C1A1A" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold" Margin="10,101,0,0" />
-        <TextBlock HorizontalAlignment="Left" Margin="50,542,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
-        <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Height="68" Width="169" Click="btn_show_information_Click" Background="#0C1A1A" Foreground="#BFA181" BorderBrush="#0C1A1A" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
+        <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Left" VerticalAlignment="Top" Height="69" Width="169" Click="btn_report_Click" Foreground="#BFA181" Background="#0C1A1A" BorderBrush="#0C1A1A" FontSize="16" FontFamily="Arial Rounded MT Bold" FontWeight="Bold" Margin="10,101,0,0" />
+        <TextBlock HorizontalAlignment="Left" Margin="50,542,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FFC07F00" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
+        <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Height="68" Width="169" Click="btn_show_information_Click" Background="#0C1A1A" Foreground="#BFA181" BorderBrush="#0C1A1A" FontSize="16" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
         <Button x:Name="btn_wallert" Content="Wallet" HorizontalAlignment="Left" Click="btn_wallert_Click" Margin="10,292,0,0" VerticalAlignment="Center" Height="52" Width="169" Foreground="#BFA181" FontSize="16" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#0C1A1A" BorderBrush="#0C1A1A"/>
-        <Button x:Name="btn_change_UserPass" Content="Change Username&#xD;&#xA;and Password" Click="btn_change_UserPass_Click" HorizontalAlignment="Left" Margin="16,292,0,0" VerticalAlignment="Top" Height="88" Width="168" Foreground="#BFA181" FontSize="18" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" Background="#0C1A1A" BorderBrush="#0C1A1A"/>
+        <Button x:Name="btn_change_UserPass" Content="Change Username&#xD;&#xA;and Password" Click="btn_change_UserPass_Click" HorizontalAlignment="Left" Margin="16,292,0,0" VerticalAlignment="Top" Height="88" Width="168" Foreground="#BFA181" FontSize="16" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" Background="#0C1A1A" BorderBrush="#0C1A1A"/>
         <Grid x:Name="grid_reportOfOrders" Margin="205,10,0,-10" Visibility="Collapsed">
             <TextBlock x:Name="txtblock_PersonalId" HorizontalAlignment="Left" Visibility="Collapsed" Margin="56,60,0,0" TextWrapping="Wrap" Text="Personal ID" VerticalAlignment="Top" Height="36" Width="132" Cursor="" FontSize="24">
                 <TextBlock.Foreground>
@@ -75,7 +75,7 @@
             <CheckBox x:Name="object_checkbox_as" Checked="object_checkbox_Checked" Content="Object" HorizontalAlignment="Left" Margin="338,125,0,0" VerticalAlignment="Top" Foreground="#BFA181" BorderBrush="#BFA181" FontSize="18" Width="109"/>
         </Grid>
         <Grid x:Name="grid_showinformation" Margin="205,0,0,0" Visibility ="Collapsed">
-            <TextBox VerticalContentAlignment="Center" x:Name="tbPackageID" HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" Foreground="White" BorderBrush="#BFA181" Background="Black"/>
+            <TextBox VerticalContentAlignment="Center" x:Name="tbPackageID" HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" Foreground="White" BorderBrush="#BFA181" Background="#FF0C1A1A"/>
             <Label x:Name="lblError_findpackage" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Top" Width="276" Height="43" Content="*No package found!*" Foreground="Red" Margin="52,124,0,0" />
 
             <TextBlock HorizontalAlignment="Left" Margin="45,36,0,0" TextWrapping="Wrap" Text="Order ID" VerticalAlignment="Top" Height="38" Width="143" FontSize="24">
@@ -136,7 +136,7 @@
             <Button x:Name="Save" Content="Save" HorizontalAlignment="Left" Click="Save_Click" Margin="660,508,0,0" VerticalAlignment="Top" Height="46" Width="188" FontSize="18" Foreground="White" BorderBrush="#FF1A1A1A">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#0a1828"/>
+                        <GradientStop Color="#0a1828" Offset="0"/>
                         <GradientStop Color="#BFA181" Offset="1"/>
                     </LinearGradientBrush>
                 </Button.Background>
