--- a/Mail Man/Mail Man/SignUp.xaml
+++ b/Mail Man/Mail Man/SignUp.xaml
@@ -43,9 +43,15 @@
                     </LinearGradientBrush>
                 </Button.Background>
             </Button>
-            <Button x:Name="leftarrow_btn" Click="leftarrow_btn_Click" Content="⬅️" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="#FF1A1A1A" Height="31" Width="47" FontSize="24" FontWeight="Bold" FontFamily="Algerian"/>
+            <Button x:Name="leftarrow_btn" Click="leftarrow_btn_Click" Content="⬅️" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="#FFBFA181" Height="26" Width="33" FontSize="20" FontWeight="Bold" FontFamily="Algerian" BorderBrush="#FF0A1828" Background="#FF0A1828"/>
+            <TextBlock HorizontalAlignment="Left" Margin="43,235,0,0" TextWrapping="Wrap" Text="🔐" VerticalAlignment="Top" Foreground="#FFBFA181" RenderTransformOrigin="-0.142,0.566"/>
+            <TextBlock HorizontalAlignment="Left" Margin="43,293,0,0" TextWrapping="Wrap" Text="🔐" VerticalAlignment="Top" Foreground="#FFBFA181" RenderTransformOrigin="-0.506,0.608"/>
+            <TextBlock HorizontalAlignment="Left" Margin="43,190,0,0" TextWrapping="Wrap" Text="👤" VerticalAlignment="Top" Height="18" Foreground="#FFBFA181"/>
+            <TextBlock HorizontalAlignment="Left" Margin="43,138,0,0" TextWrapping="Wrap" Text="📧" VerticalAlignment="Top" Height="18" Foreground="#FFBFA181"/>
+            <TextBlock HorizontalAlignment="Left" Margin="43,79,0,0" TextWrapping="Wrap" Text="🗂️" VerticalAlignment="Top" Height="18" Foreground="#FFBFA181"/>
+            <TextBlock HorizontalAlignment="Left" Margin="43,36,0,0" TextWrapping="Wrap" Text="📝" VerticalAlignment="Top" Height="18" Foreground="#FFBFA181"/>
         </Grid>
-        <TextBlock HorizontalAlignment="Center" Margin="0,413,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli" Height="21"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
+        <TextBlock HorizontalAlignment="Center" Margin="0,413,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FFC07F00" FontFamily="MV Boli" Height="21"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
 
     </Grid>
 </Window>
